fix: shift scroll

--- a/src/app/global/styles/global.scss
+++ b/src/app/global/styles/global.scss
@@ -20,7 +20,7 @@ body {
   font-style: normal;
   font-weight: 400;
   background: #fbf8ec;
-  padding-right: calc(20px - (100vw - 100%));
+  // padding-right: calc(16px - (100vw - 100%));
 }
 
 .container {
